Adicionados controladores para estabelecimento e produto

--- a/WhatsYummyApp/WhatsYummyApp/appsettings.json
+++ b/WhatsYummyApp/WhatsYummyApp/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WhatsYummyApp-3077e9a5-69a2-498b-94cc-71bef74e8129;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WhatsYummyApp-3077e9a5-69a2-498b-94cc-71bef74e8129;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "WhatsYummyAppContext": "Server=(localdb)\\mssqllocaldb;Database=WhatsYummyAppContext-9457c1b5-2f74-474c-bd58-d95f1dad30b1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
