--- a/WhatsYummy/WhatsYummy/appsettings.json
+++ b/WhatsYummy/WhatsYummy/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "WhatsYummyContext": "Server=DESKTOP-O5S3O12\\SQLEXPRESS;Database=WhatsYummyDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WhatsYummyContext": "Data Source=localhost;Initial Catalog=WhatsYummyDB;User ID=SA;Password=DPVsbcr5"
   }
 }
